# InverterClientImGui

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini
src/: config_manager.cpp  config_manager.h  firmware_updater.cpp  firmware_updater.h  http_server.cpp  http_server.h  json_escape.h  main copy.cpp  main.cpp  telemetry_logger.cpp  telemetry_logger.h  telemetry_protocol.cpp  telemetry_protocol.h
tools/: mcp2221a_gpio.py
